<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.tap4j</groupId>
    <artifactId>tap4j</artifactId>
    <version>5.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>tap4j</name>
    <description>tap4j</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
    </properties>
    <url>http://tupilabs.github.io/tap4j</url>
    <inceptionYear>2010</inceptionYear>
    <organization>
        <url>http://www.tupilabs.com</url>
        <name>TupiLabs</name>
    </organization>
    <developers>
        <developer>
            <email>kinow@apache.org</email>
            <id>kinow</id>
            <name>Bruno P. Kinoshita</name>
            <timezone>-3</timezone>
            <url>http://www.kinoshita.eti.br</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <email>cesar.fa@gmail.com</email>
            <id>cesar1983</id>
            <name>Cesar Fernandes de Almeida</name>
            <timezone>-3</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <email>patl@cpan.org</email>
            <name>Patrick LeBoutillier</name>
            <timezone>0</timezone>
            <roles>
                <role>contributor</role>
            </roles>
        </contributor>
        <contributor>
            <email>jakub.podlesak@oracle.com</email>
            <name>Jakub Podlesak</name>
            <timezone>0</timezone>
            <roles>
                <role>contributor</role>
            </roles>
        </contributor>
    </contributors>
    <licenses>
        <license>
            <name>MIT</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.org/tupilabs/tap4j</url>
    </ciManagement>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/tupilabs/tap4j/issues</url>
    </issueManagement>
    <scm>
        <connection>scm:git:git://github.com/tupilabs/tap4j.git</connection>
        <developerConnection>scm:git:git@github.com:tupilabs/tap4j.git</developerConnection>
        <url>https://github.com/tupilabs/tap4j</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <site>
            <id>tap4j-github-site</id>
            <url>scm:git:ssh://git@github.com/tupilabs/tap4j.git</url>
        </site>
    </distributionManagement>
    <dependencies>
        <!-- yaml -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.29</version>
        </dependency>
        <!-- testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean verify apache-rat:check clirr:check checkstyle:check spotbugs:check javadoc:javadoc</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <source>${java.version}</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <version>0.13</version>
                <configuration>
                    <ignoreErrors>true</ignoreErrors>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>3.1.12.2</version>
                <configuration>
                    <!-- <excludeFilterFile>${basedir}/spotbugs-exclude-filter.xml</excludeFilterFile> -->
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <configLocation>${basedir}/src/config/checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <!--<consoleOutput>true</consoleOutput>-->
                    <enableRulesSummary>false</enableRulesSummary>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.doxia</groupId>
                        <artifactId>doxia-module-markdown</artifactId>
                        <version>1.10</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>
</project>
